--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,47 @@
+@font-face {
+  font-family: "Open-Sans";
+  src: url("../fonts/OpenSans-Regular.ttf");
+}
+
+:root {
+  --black: #333;
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Open-Sans";
+  background-color: #f0f0f0;
+  color: var(--black);
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+section {
+  padding: 4rem 20vw;
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+  color: rgb(70, 70, 70);
+  font-weight: bold;
+}
+
+a:hover {
+  color: rgb(40, 40, 40);
+  text-decoration: underline;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  gap: 4vw;
+  border: 2px solid rgb(220, 220, 220);
+  border-radius: 40px;
+  padding: 20px;
+  height: 0.8rem;
 }
