--- a/views/index.pug
+++ b/views/index.pug
@@ -3,16 +3,20 @@ extends layout
 block content
   section
     h1= title
-    p Welcome to #[em Inventory Application], a website where you can manage, track, and store things in your inventory.
+    p Welcome to 
+      em Inventory Application
+      | , a website where you can manage, track, and store things in your inventory.
 
-    br
     hr
-    br
 
-    h2 Current Inventory 
+    h2 Current Inventory
 
-    p The inventory currently has: 
+    p The inventory currently has:
 
     ul 
-      li #[strong Items:] !{item_count}
-      li #[strong Categories:] !{category_count}
+      li 
+        strong Items: 
+        | !{item_count}
+      li 
+        strong Categories: 
+        | !{category_count}
