--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -18,3 +18,5 @@ block content
                         br
         else
             p This category has no items.
+        hr
+        a(href=category.url+"/delete") Delete category
