--- a/views/item_detail.pug
+++ b/views/item_detail.pug
@@ -11,3 +11,5 @@ block content
                 a(href=item.category.url) #{item.category.name}
             else
                 | No category available
+        hr
+        a(href=item.url+"/delete") Delete item
