Add the ability to update items and categories

--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -19,4 +19,6 @@ block content
         else
             p This category has no items.
         hr
-        a(href=category.url+"/delete") Delete category
+        .actions 
+            a(href=category.url+"/update") Update category
+            a(href=category.url+"/delete") Delete category
