--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -5,7 +5,7 @@ block content
         h1 #{title}: #{item.name}
         p= item.description
 
-        p Do you really want to delete this category?
+        p Do you really want to delete this item?
         form(method="POST")
                 .form-group 
                     input#author.id(type='hidden' name='itemid' value=item._id)
