--- a/views/item_detail.pug
+++ b/views/item_detail.pug
@@ -1,16 +1,19 @@
-extends layout 
+extends layout
 
-block content 
-    section 
+block content
+    section
         h1 #{item.name}
         p #{item.description}
         p #[strong Price: ] #{item.price}$
         p #[strong Number In Stock: ] #{item.numberInStock}
         p #[strong Category: ]
-            if item.category
-                a(href=item.category.url) #{item.category.name}
+            if item.category.length > 0
+                each val, index in item.category
+                    a(href=val.url) #{val.name}
+                    if index < item.category.length - 1
+                        |,&nbsp;
             else
-                | No category available
+                | None
         hr
         .actions
             a(href=item.url+"/update") Update item
