--- a/views/category_delete.pug
+++ b/views/category_delete.pug
@@ -21,5 +21,5 @@ block content
 
             form(method="POST")
                 .form-group 
-                    input#author.id(type='hidden' name='categoryid' value=category._id)
+                    input#author.id(type='hidden' name='categoryid' value=category.id)
                     button(type='submit') Delete
